--- a/SongGame.html
+++ b/SongGame.html
@@ -114,14 +114,36 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <div style="height: 30px;">Place a letter <span>(1 placed)</span></div>
-                                <div style="height: 30px;">
-                                    <span class="jc-button" onclick="PlaceA()">A</span>
-                                    <span class="jc-button" onclick="PlaceB()">B</span>
-                                    <span class="jc-button" onclick="PlaceC()">C</span>
-                                    <span class="jc-button" onclick="PlaceD()">D</span>
-                                    <span class="jc-button" onclick="PlaceE()">E</span>
-                                    <span class="jc-button" onclick="PlaceF()">F</span>    
+                                <div style="margin: 30px;">Place a letter <span>(1 placed)</span></div>
+                                <div style="margin: 30px;">
+                                    <span class="jc-button" onclick="PlaceA()" id="AButton">A</span>
+                                    <span class="jc-button" onclick="PlaceB()" id="BButton">B</span>
+                                    <span class="jc-button" onclick="PlaceC()" id="CButton">C</span>
+                                    <span class="jc-button" onclick="PlaceD()" id="DButton">D</span>
+                                    <span class="jc-button" onclick="PlaceE()" id="EButton">E</span>
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">F</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">G</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">H</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">I</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">J</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">K</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">L</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">M</span>    
+                                </div>
+                                <div style="margin: 30px;">
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">N</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">O</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">P</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">Q</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">R</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">S</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">T</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">U</span>    
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">V</span>
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">W</span>
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">X</span>
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">Y</span>
+                                    <span class="jc-button" onclick="PlaceF()" id="FButton">Z</span>
                                 </div>
                             </td>
                         </tr>
