--- a/SongGame.html
+++ b/SongGame.html
@@ -90,8 +90,8 @@
                                 </span>
                             </td>
                             <td>
-                                <span onclick="ShowWordStructure()" id="show-word-structure-button" class="jc-button">
-                                    Word structure
+                                <span onclick="ShowSpaces()" id="show-spaces-button" class="jc-button">
+                                    Spaces
                                 </span>
                             </td>
                         </tr>
@@ -102,7 +102,7 @@
                                 </span>
                             </td>
                             <td>
-                                <span onclick="ShowMostLetter()" id="show-most-letter-button" class="jc-button">
+                                <span onclick="ShowLetterThatAppearsMost()" id="show-letter-that-appeasrs-most-button" class="jc-button">
                                     Letter that appears most
                                 </span>
                             </td>
