--- a/SongGame.html
+++ b/SongGame.html
@@ -102,7 +102,7 @@
                                 </span>
                             </td>
                             <td>
-                                <span onclick="ShowLetterThatAppearsMost()" id="show-letter-that-appeasrs-most-button" class="jc-button">
+                                <span onclick="ShowLetterThatAppearsMost()" id="show-letter-that-appears-most-button" class="jc-button">
                                     Letter that appears most
                                 </span>
                             </td>
@@ -111,34 +111,34 @@
                             <td colspan="2">
                                 <div style="margin: 30px;">Place a letter <span>(1 placed)</span></div>
                                 <div style="margin: 30px;">
-                                    <span class="jc-button" onclick="PlaceA()" id="AButton">A</span>
-                                    <span class="jc-button" onclick="PlaceB()" id="BButton">B</span>
-                                    <span class="jc-button" onclick="PlaceC()" id="CButton">C</span>
-                                    <span class="jc-button" onclick="PlaceD()" id="DButton">D</span>
-                                    <span class="jc-button" onclick="PlaceE()" id="EButton">E</span>
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">F</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">G</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">H</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">I</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">J</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">K</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">L</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">M</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('A')" id="AButton">A</span>
+                                    <span class="jc-button" onclick="PlaceLetter('B')" id="BButton">B</span>
+                                    <span class="jc-button" onclick="PlaceLetter('C')" id="CButton">C</span>
+                                    <span class="jc-button" onclick="PlaceLetter('D')" id="DButton">D</span>
+                                    <span class="jc-button" onclick="PlaceLetter('E')" id="EButton">E</span>
+                                    <span class="jc-button" onclick="PlaceLetter('F')" id="FButton">F</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('G')" id="GButton">G</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('H')" id="HButton">H</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('I')" id="IButton">I</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('J')" id="JButton">J</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('K')" id="KButton">K</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('L')" id="LButton">L</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('M')" id="MButton">M</span>    
                                 </div>
                                 <div style="margin: 30px;">
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">N</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">O</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">P</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">Q</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">R</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">S</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">T</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">U</span>    
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">V</span>
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">W</span>
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">X</span>
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">Y</span>
-                                    <span class="jc-button" onclick="PlaceF()" id="FButton">Z</span>
+                                    <span class="jc-button" onclick="PlaceLetter('N')" id="NButton">N</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('O')" id="OButton">O</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('P')" id="PButton">P</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('Q')" id="QButton">Q</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('R')" id="RButton">R</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('S')" id="SButton">S</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('T')" id="TButton">T</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('U')" id="UButton">U</span>    
+                                    <span class="jc-button" onclick="PlaceLetter('V')" id="VButton">V</span>
+                                    <span class="jc-button" onclick="PlaceLetter('W')" id="WButton">W</span>
+                                    <span class="jc-button" onclick="PlaceLetter('X')" id="XButton">X</span>
+                                    <span class="jc-button" onclick="PlaceLetter('Y')" id="YButton">Y</span>
+                                    <span class="jc-button" onclick="PlaceLetter('Z')" id="ZButton">Z</span>
                                 </div>
                             </td>
                         </tr>
