--- a/SongGame.html
+++ b/SongGame.html
@@ -23,8 +23,9 @@
                             </th>
                         </tr>
                         <tr>
-                            <td>
-                                Score: <span id="score">100</span>    
+                            <td id="score-td" colspan="2">
+                                <span id="score-label">Current Score: </span>
+                                <span id="score">100</span>    
                             </td>
                         </tr>
                     </table>
@@ -65,10 +66,10 @@
                     <table class="hints-table">
                         <tr>
                             <th>                                
-                                Major hints <span>(1 used)</span>                              
+                                Major hints                              
                             </th>
                             <th>
-                                Minor hints <span>(1 used)</span>                               
+                                Minor hints                               
                             </th>
                         </tr>
                         <tr>
@@ -109,7 +110,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <div style="margin: 30px;">Place a letter <span>(1 placed)</span></div>
+                                <div style="margin: 30px;">Place a letter</div>
                                 <div style="margin: 30px;">
                                     <span class="jc-button" onclick="PlaceLetter('A')" id="AButton">A</span>
                                     <span class="jc-button" onclick="PlaceLetter('B')" id="BButton">B</span>
