working on end game logic2

--- a/SongGame.html
+++ b/SongGame.html
@@ -174,11 +174,13 @@
                             <div id="NewGameButtons">
                                 <div 
                                     class="jc-button"
+                                    id="start-button"
                                     onclick="StartNewGame()">
                                     Start
                                 </div>
                                 <div 
                                     class="jc-button"
+                                    id="pick-a-song-for-a-friend-button"
                                     onclick="">
                                     Pick A Song For A Friend
                                 </div>
