--- a/SongGame.html
+++ b/SongGame.html
@@ -169,6 +169,8 @@
                                     <option>2000</option>
                                     <option>1990</option>
                                     <option>1980</option>
+                                    <option>1970</option>
+                                    <option>1960</option>
                                 </select>
                             </div>
                             <div id="NewGameButtons">
