better styling for song title

--- a/SongGame.html
+++ b/SongGame.html
@@ -59,7 +59,7 @@
                 </div>
                 <hr>
                 <div class="jc-button" onclick="OpenModal('Guess')" id="guess-button">
-                    Guess
+                    Guess (1pt)
                 </div>
                 <hr>
                 <div id='hints-container'>
