making app file structure look more standard

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
     <meta>
     <head>
-        <link rel="stylesheet" href="JcStyle.css">
-        <script src="Script.js"></script>
+        <link rel="stylesheet" href="jcstyles.css">
+        <script src="script.js"></script>
     </head>
     <body onload="OnLoad()">
         <div class="jc-container">
