--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <meta>
     <head>
-        <link rel="stylesheet" href="jcstyles.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="/jcstyles.css">
+        <script src="/script.js"></script>
     </head>
     <body onload="OnLoad()">
         <div class="jc-container">
